# mxyzptlk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  config.yml  log4rs.yml
.cargo/: audit.toml
.github/workflows/: callee-custom.yaml  callee-custom.yml  cargo-checkmate.yaml  rust-clippy.yml
iff/: .gitignore  Cargo.toml
iff/src/: lib.rs
src/: blorb.rs  config.rs  error.rs  execify.rs  executor.rs  files.rs  iff.rs  instruction-old.rs  instruction.rs  interpreter.rs  main.rs  memory.rs  object.rs  object_old.rs  object_tree.rs  old-main.rs  quetzal.rs  state.rs  test_util.rs  text.rs  zmachine.rs
src/executor/: header.rs  instruction.rs  interpreter.rs  log.rs  object.rs  state.rs  text.rs  util.rs
src/iff/: blorb.rs  mod.rs  quetzal.rs
src/iff/blorb/: aiff.rs  mod.rs  oggv.rs  ridx.rs  sloop.rs
src/iff/quetzal/: cmem.rs  ifhd.rs  mod.rs  stks.rs  umem.rs
src/instruction/: decoder.rs  mod.rs
src/instruction/processor/: mod.rs  processor_0op.rs  processor_1op.rs  processor_2op.rs  processor_ext.rs  processor_var.rs
src/interpreter/: curses.rs  curses_v2.rs
src/lib/zm/: blorb.rs  config.rs  error.rs  files.rs  iff.rs  lib.rs  quetzal.rs  test_util.rs  text.rs  types.rs
src/memory/: header.rs
src/memory/header/: flags.rs
src/object/: attribute.rs  mod.rs  property.rs
src/sound/: loader.rs  mod.rs  rodio_player.rs  test_player.rs
src/state/: frame.rs  frame_stack.rs  header.rs  instruction.rs  memory.rs  object.rs  save_restore.rs  screen.rs  sound.rs  text.rs
src/state/frame_stack/: frame.rs
src/state/instruction/: decoder.rs  processor.rs
src/state/object/: attribute.rs  property.rs
src/state/rng/: chacha_rng.rs
src/state/screen/: buffer.rs  curses.rs  easy_curses.rs  pancurses.rs
src/zmachine/: files.rs  frame.rs  mod.rs  object.rs  save_restore.rs  state.rs  text.rs
src/zmachine/instruction/: decoder.rs  processor.rs
src/zmachine/io/: mod.rs  screen.rs
src/zmachine/object/: attribute.rs  property.rs
src/zmachine/rng/: chacha_rng.rs  mod.rs
src/zmachine/state/: frame.rs  header.rs  memory.rs  mod.rs  object.rs  (+1 more)
zcode/: etude.z5
(+40 files in other folders)
