[package]
name = "mxyzptlk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
pancurses = "0.17"
log4rs = "1.2.0"
log-mdc = "0.1.0"
rodio = "0.17.1"
tempfile = "3.4.0"
easycurses = "0.13.0"
