[package]
name = "mxyzptlk"
version = "1.0.0-beta.2"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["pancurses"]
sndfile = ["dep:sndfile"]
pancurses = ["dep:pancurses"]
easycurses = ["dep:easycurses", "dep:pancurses"]

[dependencies]
dirs = "5.0.1"
time = "0.3.20"
log = "0.4.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
# This is important to override a crufty dep in the easycurses crate
pancurses = { version = "0.17", optional = true }
log4rs = "1.2.0"
log-mdc = "0.1.0"
rodio = { version = "0.17.1", default-features = false, features = [
    "flac",
    "vorbis",
] }
tempfile = "3.4.0"
easycurses = { version = "0.13.0", optional = true }
serde_yaml = "0.9.19"
regex = "1.7.1"
sndfile = { version = "0.1.1", optional = true }
iff = { path = "iff" }

[dev-dependencies]
sndfile = "0.1.1"
