[package]
name = "mxyzptlk"
version = "2.0.0-alpha.1"
edition = "2021"

[[bin]]
name = "pancurses"
path = "src/bin/pancurses/main.rs"

[lib]
name = "zm"
path = "src/lib/zm/lib.rs"
edition = "2021"
crate_type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
sndfile = ["dep:sndfile"]

[dependencies]
dirs = "5.0.1"
time = "0.3.20"
log = "0.4.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
pancurses = "0.17"
log4rs = "1.2.0"
log-mdc = "0.1.0"
rodio = { version = "0.18.0", default-features = false, features = [
    "flac",
    "vorbis",
] }
tempfile = "3.4.0"
serde_yaml = "0.9.19"
regex = "1.7.1"
sndfile = { version = "0.1.1", optional = true }

[dev-dependencies]
sndfile = "0.1.1"
